# rust-server

./: Cargo.toml  Config.toml
src/: main.rs
src/api/: common.rs  constant.rs  error_code.rs  error_msg.rs  user.rs
src/database/: mysql.rs  table.rs
src/model/: common.rs  user.rs
src/utils/: file_system.rs
