[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-cors = "*"
serde = {version = "*", features = ["derive"]}
regex = "*"
mysql = "*"
toml = "*"
md5 = "*"